Правки 1 лаба СиАОД