@@ -1,13 +1,14 @@
 package AggregateProcessor;
 
+import java.util.Arrays;
 import java.util.List;
 
 import DataProcessor.DataProcessor;
 
 public class AggregateProcessor {
+
     @DataProcessor
     public List<String> aggregateData(List<String> data) {
-        return List.of(String.join(", ", data));
+        return Arrays.asList(String.join(", ", data));
     }
 }
-
